--- a/package.json
+++ b/package.json
@@ -21,8 +21,15 @@
     "@angular/platform-server": "^19.0.0",
     "@angular/router": "^19.0.0",
     "@angular/ssr": "^19.0.5",
+    "@primeng/themes": "^19.0.9",
+    "@tailwindcss/postcss": "^4.0.12",
     "express": "^4.18.2",
+    "jquery": "^3.7.1",
+    "popper.js": "^1.16.1",
+    "postcss": "^8.5.3",
+    "primeng": "^19.0.9",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^4.0.12",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
@@ -30,15 +37,15 @@
     "@angular-devkit/build-angular": "^19.0.5",
     "@angular/cli": "^19.0.5",
     "@angular/compiler-cli": "^19.0.0",
+    "@types/express": "^4.17.17",
+    "@types/jasmine": "~5.1.0",
+    "@types/node": "^18.18.0",
     "jasmine-core": "~5.4.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.6.2",
-    "@types/express": "^4.17.17",
-    "@types/jasmine": "~5.1.0",
-    "@types/node": "^18.18.0"
+    "typescript": "~5.6.2"
   }
 }
