--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,7 @@
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.slim.min.js",
-              "node_modules/popper.js/dist/umd/popper.main.js"
+             "node_modules/popper.js/dist/umd/popper.min.js"
             ],
             "server": "src/main.server.ts",
             "outputMode": "server",
